<resources>
    <!-- App name shown in tab bar -->
    <string name="app_name">Currency Converter</string>

    <!-- Title of first tab -->
    <string name="tab_text_1">Convert</string>

    <!-- Title of second tab -->
    <string name="tab_text_2">Rates</string>

    <!-- Default text for amount values -->
    <string name="default_amount">0.00</string>

    <!-- Image description for 'compare arrows' image -->
    <string name="description_compare_arrows">Compare arrows</string>

    <!-- From (currency) -->
    <string name="from">From</string>

    <!-- To (currency( -->
    <string name="to">To</string>

    <!-- Base (for rates) -->
    <string name="base">Base</string>

    <!-- Rates display -->
    <string name="rates">Rates</string>

    <!-- Title for settings icon (not shown) -->
    <string name="item_settings">Settings</string>

    <!-- Currencies used for the spinners -->
    <string-array name="currencies">
        <item>EUR - Euro</item>
        <item>SEK - Swedish Krona</item>
        <item>USD - US Dollar</item>
        <item>GBP - Great British Pound</item>
        <item>CNY - Chinese Yuan</item>
        <item>JPY - Japanese Yen</item>
        <item>KRW - South Korean Won</item>
    </string-array>

    <!-- Currency refresh delay -->
    <string-array name="refresh_delays">
        <item>1 minute</item>
        <item>1 hour</item>
        <item>1 day</item>
    </string-array>

    <!-- Generic save -->
    <string name="generic_save">Save</string>

    <!-- Generic cancel -->
    <string name="generic_cancel">Cancel</string>

    <!-- Generic OK -->
    <string name="generic_ok">OK</string>

    <!-- Setting: Format "from" amount -->
    <string name="setting_format_from_title">Format &quot;from&quot; amount</string>
    <string name="setting_format_from_info">Format and put a comma between every 3 numbers</string>

    <!-- Setting: Format "to" amount -->
    <string name="setting_format_to_title">Format &quot;to&quot; amount</string>
    <string name="setting_format_to_info">Round and put a prefix at the end</string>

    <!-- Setting: Use SI prefix -->
    <string name="setting_use_si_title">Use SI prefix</string>
    <string name="setting_use_si_info">Use SI prefix (k, …) instead of full name (thousand, …) for &quot;to&quot; amount</string>

    <!-- Setting: Location currency -->
    <string name="setting_location_currency_title">Location currency</string>
    <string name="setting_location_currency_info">Automatically set &quot;from&quot; currency based on current location instead of last used</string>

    <!-- Setting: Background refresh delay -->
    <string name="setting_auto_refresh_title">Auto refresh currency values</string>
    <string name="setting_auto_refresh_info">Refresh currency in the background every:</string>

</resources>