<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Format from -->
    <Switch
        android:id="@+id/switch_setting_format_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_format_from_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_format_from_info"/>

    <!-- Format to -->
    <Switch
        android:id="@+id/switch_setting_format_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_format_to_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_format_to_info"/>

    <!-- To SI prefix -->
    <Switch
        android:id="@+id/switch_setting_use_si"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_use_si_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_use_si_info"/>

    <!-- Auto location currency -->
    <Switch
        android:id="@+id/switch_setting_location_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_location_currency_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_location_currency_info"/>

    <!-- Refresh delay -->
    <Switch
        android:id="@+id/switch_setting_auto_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_auto_refresh_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_auto_refresh_info"/>

    <Spinner
        android:id="@+id/spinner_setting_auto_refresh_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>